--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.67.0",
     "styled-components": "^6.0.8"
   },
