--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.10",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.8",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
@@ -26,11 +28,12 @@
     "reselect": "^4.1.8",
     "sass": "^1.67.0",
     "stripe": "^14.1.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
