--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^2.1.10",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.8",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "sass": "^1.67.0",
     "stripe": "^14.1.0",
     "styled-components": "^6.0.8",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
