--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^2.1.10",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.8",
+    "@types/styled-components": "^5.1.29",
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
